@@ -1,0 +1,2 @@
+@comment $NetBSD: PLIST,v 1.1 2014/04/26 15:55:12 manu Exp $
+libexec/nagios/check_fstab
